chore: apply latest updates after initial reset

--- a/memory/2026-02-22.md
+++ b/memory/2026-02-22.md
@@ -99,3 +99,10 @@
 - [자동 회고] bulk-delete-enqueue | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
 - [자동 회고] bulk-delete-enqueue | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
 - [자동 회고] bulk-delete-enqueue | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
+- [자동 회고] initial-reset-enqueue | 결과: ok | 위험: 중복 초기화 요청 | 다음: 큐 dedupe 상태 확인
+- [자동 회고] rp-healthcheck | 결과: issue | 위험: runtime lock/active room 불일치 | 다음: 이상 시 RP runtime만 재기동
+- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
+- [RP 헬스] 런타임 다운 알림 전송(1개 채널)
+- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
+- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
+- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
