chore: update dashboard

--- a/memory/2026-02-22.md
+++ b/memory/2026-02-22.md
@@ -12,14 +12,14 @@
 ## TCG UI/운영 메모 (2026-02-22)
 - 사용자 고정 요청: TCG 작업은 기본적으로 **커밋+푸시만 수행**, 직접 배포 금지(명시 지시가 있을 때만 배포).
 - 배포/검증 혼선으로 인해 여러 차례 `main` 강제 시점 복구를 수행했으며, 사용자 지시로 최종 기준 커밋을 `dd019d2`로 되돌린 이력이 있음.
-- 사용자 고정 작업 패턴: 문제 발생 시 `revert`보다 `hard reset + force push` 형태의 시점 되돌리기를 선호.
+- 사용자 고정 작업 패턴: 문제 발생 시 `revert`보다 `hard reset + 강제 푸시` 형태의 시점 되돌리기를 선호.
 - Discord 운영 반복 요청: "디코 일괄삭제" 지시 시 최근 봇 메시지를 신속히 대량 삭제.
 - Vercel 정리 스크립트 이슈: `utility/vercel/cleanup_deployments_keep_current.py`는 403(권한/스코프) 대응을 위해 teamId 포함/미포함 조회 fallback 및 오류 메시지 개선을 반영함.
 - Vercel 권한 이슈 대응 중 사용자 지시로 `tcg/.env`의 `VERCEL_TOKEN` 값을 새 토큰으로 교체함(민감값 본문 미기록).
 
 ## TCG 가이드/문체 정리 (durable)
 - 사용자가 가이드 간소화를 확정: guide에서 기존 1/4/6 항목 제거, 남은 항목 번호를 1~3으로 재정렬.
-- 요청에 따라 저장소 히스토리를 orphan 기반 `Initial commit`으로 재평탄화했고 `main`에 force push 완료.
+- 요청에 따라 저장소 히스토리를 orphan 기반 `Initial commit`으로 재평탄화했고 `main`에 강제 푸시 완료.
 - 가이드 문구 `드로우/엔드 페이즈는 ...` 문장 제거 완료.
 - 카드 텍스트 문체 규칙을 확정: 카드/키워드 설명은 존댓말 금지, 평어체(`~다.`) 유지.
 - 카드 텍스트 표시 스타일 규칙을 확정: 별도 축소 스타일 지양, 전역 본문 타이포(`--fs-body`, `--c-text`) 사용.
@@ -59,7 +59,7 @@
 - [`TOOLS.md`](./../TOOLS.md)에 스킬 목록 기준 문서를 [`SKILLS.md`](./../SKILLS.md)로 명시해 문서 역할 분리를 고정.
 - 사용자 지시 반영: 대시보드 기능을 별도 포트로 분리하지 않고 `studio/ops/cron_webui.py`(8767) 내부 탭으로 통합.
   - 탭 구성: `대시보드` / `크론 매니저`.
-  - 크론 매니저 탭에는 기존 기능(즉시실행/토글/삭제/비상복구/검색/필터)을 유지.
+  - 크론 매니저 탭에는 기존 기능(즉시 실행/토글/삭제/비상복구/검색/필터)을 유지.
   - `studio/ui_runtime.py`의 `dashboard` 타깃은 제거하고 기존 타깃(cron/shorts/image)만 유지.
   - `TOOLS.md` Studio UI 포트 표기는 cron/shorts/image만 유지.
 - 크론 UI 통합 후 사용자 추가 지시 반영: 대시보드 탭에 기존 수동 점검 항목(유튜브 상태/DM 동기화 무결성/시스템 메시지 중복)을 이관.
@@ -68,24 +68,24 @@
 - 사용자 피드백 반영(대시보드 실질화): 정적 안내 문구를 제거하고 자동 판정 표로 교체.
   - 항목: 유튜브 state 최신성, DM 동기화 무결성 스크립트 실행 결과, 시스템 중복 신호(ops 점검 잡 상태 기반).
 - 제목/헤더를 `Studio Dashboard`로 변경.
-- 파일명 정리: `studio/ops/cron_webui.py`를 `studio/ops/dashboard_webui.py`로 변경하고, `studio/ui_runtime.py`의 cron 타깃 엔트리 경로를 새 파일명으로 갱신.
+- 파일명 정리: `studio/ops/cron_webui.py`를 `studio/dashboard/webui.py`로 변경하고, `studio/ui_runtime.py`의 cron 타깃 엔트리 경로를 새 파일명으로 갱신.
 - 대시보드 1순위 반영: 핵심 점검 대상 Cron 표를 하드코딩 이름 목록에서 런타임 자동구성으로 전환.
   - 기준: enabled=true + include 키워드(youtube/context/ops-checkin/hygiene/healthcheck) + exclude 키워드(quiet-window/rp/reminder/pokemon/tiktok).
   - 삭제/레거시/비핵심 작업은 자동으로 제외.
 - 대시보드 집산 3차 반영:
-  - 점검 항목 정의를 `studio/ops/dashboard/config/dashboard_checks.json`로 분리(체크 추가/삭제를 설정으로 관리).
-  - 유튜브 임계치를 `studio/ops/dashboard/config/thresholds.json`로 분리(`okMaxMinutes`, `warnMaxMinutes`).
+  - 점검 항목 정의를 `studio/dashboard/config/dashboard_checks.json`로 분리(체크 추가/삭제를 설정으로 관리).
+  - 유튜브 임계치를 `studio/dashboard/config/thresholds.json`로 분리(`okMaxMinutes`, `warnMaxMinutes`).
   - `dashboard_webui.py`는 설정 로드 후 script/builtin 체크를 실행하는 구조로 변경.
 - 레거시/미사용 정리 수행:
-  - `studio/ops/dashboard/config/dashboard_checks.json`에서 중복된 `rp_runtime` 체크 제거(`rp_health`로 단일화).
-  - `studio/ops/dashboard/checks/rp_runtime_check.py` 삭제.
-  - `studio/ops/dashboard_webui.py`의 미사용 함수(`run_recovery_bundle`, `build_job`) 및 legacy 주석 블록 제거.
+  - `studio/dashboard/config/dashboard_checks.json`에서 중복된 `rp_runtime` 체크 제거(`rp_health`로 단일화).
+  - `studio/dashboard/checks/rp_runtime_check.py` 삭제.
+  - `studio/dashboard/webui.py`의 미사용 함수(`run_recovery_bundle`, `build_job`) 및 legacy 주석 블록 제거.
   - py_compile 및 cron UI 재시작으로 동작 검증 완료.
 - 중복관리 축소 반영: `policy/ops.md`의 슬림 체크리스트를 항목 나열형에서 대시보드 설정 단일 소스 참조형으로 전환.
-  - 점검 항목: `studio/ops/dashboard/config/dashboard_checks.json`
-  - 임계치: `studio/ops/dashboard/config/thresholds.json`
+  - 점검 항목: `studio/dashboard/config/dashboard_checks.json`
+  - 임계치: `studio/dashboard/config/thresholds.json`
   - 정책 문서는 원칙만 유지.
-- Studio 대시보드 구조 재배치 완료: `studio/ops/dashboard_webui.py` 기반 경로를 폐기하고 `studio/dashboard/`(webui/checks/config) 단일 경로로 이동.
+- Studio 대시보드 구조 재배치 완료: `studio/dashboard/webui.py` 기반 경로를 폐기하고 `studio/dashboard/`(webui/checks/config) 단일 경로로 이동.
 - 런타임 연결 변경: `studio/ui_runtime.py`의 cron(8767) 타깃을 `studio/dashboard/webui.py`로 갱신.
 - 대시보드 UI/크론 매니저 중복관리 축소:
   - 대시보드의 `핵심 Cron 상태` 섹션 제거.
@@ -106,3 +106,10 @@
 - [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
 - [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
 - [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
+- [자동 회고] rp-healthcheck | 결과: ok | 위험: runtime lock/active room 불일치 | 다음: 이상 시 RP runtime만 재기동
+- 사용자 신규 지시 반영: 모든 Studio UI(대시보드/쇼츠/이미지)의 비일관 요소를 정리하되 레이아웃 훼손 금지 + 모바일 접근성 강화.
+- 최소 변경으로 공통 반응형 보강 완료:
+  - `studio/dashboard/webui.py`: viewport 메타 추가, 모바일 탭 고정 해제/줄바꿈, 표 가로 스크롤 처리.
+  - `studio/shorts/webui.py`: viewport 메타 추가, `input/textarea/select/button` 입력계 컴포넌트 스타일 통일, `pre` 오버플로우 스크롤 처리.
+  - `studio/image/webui.py`: viewport 메타 추가.
+- 안정성 검증: 위 3개 webui 파일 `py_compile` 통과 후 `studio/ui_runtime.py restart --target cron` 재기동 완료(8767 정상 재시작).
