chore: update dashboard

--- a/memory/2026-02-22.md
+++ b/memory/2026-02-22.md
@@ -113,3 +113,10 @@
   - `studio/shorts/webui.py`: viewport 메타 추가, `input/textarea/select/button` 입력계 컴포넌트 스타일 통일, `pre` 오버플로우 스크롤 처리.
   - `studio/image/webui.py`: viewport 메타 추가.
 - 안정성 검증: 위 3개 webui 파일 `py_compile` 통과 후 `studio/ui_runtime.py restart --target cron` 재기동 완료(8767 정상 재시작).
+
+- TCG 오버레이/패널 토큰 정리(사용자 지시):
+  - `--c-surface-1` 알파 제거(불투명)로 모달/패널/Swal 본체 불투명화.
+  - `styles.css`, `game.css`에서 `--panel`, `--panel2`, `--overlay-*` 중간 alias 의존 제거 후 `--c-*` 토큰 직접 참조로 통일.
+  - 백드롭(`--c-overlay-backdrop`)은 사용자 의도에 맞춰 알파값 유지(본체 색과 분리).
+  - 검증: `npm run palette:build` 정상.
+  - 배포: tcg `main` 커밋/푸시 완료 (`33f1413`).
