chore: update dashboard

--- a/memory/2026-02-22.md
+++ b/memory/2026-02-22.md
@@ -96,16 +96,11 @@
   - `policy/ops.md`의 슬림 체크리스트를 항목 하드코딩에서 대시보드 설정 참조형으로 전환.
 - 레거시 표기 정리: 런타임 출력/설명에서 `Taeyul`, `CRON_WEBUI` 표기를 `Studio dashboard` 기준으로 교체.
 - 사용자 운영 선호 반영: 대시보드 집산은 유지하되 소스 원본 직접 이동은 보류, 대시보드 관점의 참조/판정/표출만 집산(어댑터 레이어) 원칙 합의.
-- [자동 회고] bulk-delete-enqueue | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
-- [자동 회고] bulk-delete-enqueue | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
-- [자동 회고] bulk-delete-enqueue | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
+- [자동 회고] bulk-delete-enqueue 3회 | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
 - [자동 회고] initial-reset-enqueue | 결과: ok | 위험: 중복 초기화 요청 | 다음: 큐 dedupe 상태 확인
 - [자동 회고] rp-healthcheck | 결과: issue | 위험: runtime lock/active room 불일치 | 다음: 이상 시 RP runtime만 재기동
-- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
+- [RP 헬스] runtime 비정상 종료 4회(code=1, lived=0.1s) -> 자동 재시작
 - [RP 헬스] 런타임 다운 알림 전송(1개 채널)
-- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
-- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
-- [RP 헬스] runtime 비정상 종료(code=1, lived=0.1s) -> 자동 재시작
 - [자동 회고] rp-healthcheck | 결과: ok | 위험: runtime lock/active room 불일치 | 다음: 이상 시 RP runtime만 재기동
 - 사용자 신규 지시 반영: 모든 Studio UI(대시보드/쇼츠/이미지)의 비일관 요소를 정리하되 레이아웃 훼손 금지 + 모바일 접근성 강화.
 - 최소 변경으로 공통 반응형 보강 완료:
