chore: update dashboard

--- a/memory/2026-02-22.md
+++ b/memory/2026-02-22.md
@@ -57,7 +57,7 @@
   - [`policy/studio.md`](./../policy/studio.md) 쇼츠 규칙에 `defaults` 사전합의 + `lines/subs` 동시 갱신 + 렌더 직전 워터마크 중간점검 + 스크립트 없이 수동 체크리스트 적용을 명시.
   - [`policy/ops.md`](./../policy/ops.md) 점검 원칙에 Discord DM 일괄삭제 운영값(가능한 큰 배치, 중간보고 생략, 종료 후 1회 보고, 상대 메시지 삭제 제약 1줄 고지)을 명시.
 - [`TOOLS.md`](./../TOOLS.md)에 스킬 목록 기준 문서를 [`SKILLS.md`](./../SKILLS.md)로 명시해 문서 역할 분리를 고정.
-- 사용자 지시 반영: 대시보드 기능을 별도 포트로 분리하지 않고 `studio/ops/cron_webui.py`(8767) 내부 탭으로 통합.
+- 사용자 지시 반영: 대시보드 기능을 별도 포트로 분리하지 않고 `studio/dashboard/webui.py`(8767) 내부 탭으로 통합.
   - 탭 구성: `대시보드` / `크론 매니저`.
   - 크론 매니저 탭에는 기존 기능(즉시 실행/토글/삭제/비상복구/검색/필터)을 유지.
   - `studio/ui_runtime.py`의 `dashboard` 타깃은 제거하고 기존 타깃(cron/shorts/image)만 유지.
@@ -68,7 +68,7 @@
 - 사용자 피드백 반영(대시보드 실질화): 정적 안내 문구를 제거하고 자동 판정 표로 교체.
   - 항목: 유튜브 state 최신성, DM 동기화 무결성 스크립트 실행 결과, 시스템 중복 신호(ops 점검 잡 상태 기반).
 - 제목/헤더를 `Studio Dashboard`로 변경.
-- 파일명 정리: `studio/ops/cron_webui.py`를 `studio/dashboard/webui.py`로 변경하고, `studio/ui_runtime.py`의 cron 타깃 엔트리 경로를 새 파일명으로 갱신.
+- 파일명 정리: `studio/dashboard/webui.py`를 `studio/dashboard/webui.py`로 변경하고, `studio/ui_runtime.py`의 cron 타깃 엔트리 경로를 새 파일명으로 갱신.
 - 대시보드 1순위 반영: 핵심 점검 대상 Cron 표를 하드코딩 이름 목록에서 런타임 자동구성으로 전환.
   - 기준: enabled=true + include 키워드(youtube/context/ops-checkin/hygiene/healthcheck) + exclude 키워드(quiet-window/rp/reminder/pokemon/tiktok).
   - 삭제/레거시/비핵심 작업은 자동으로 제외.
