chore: remove old path references and harden direct-run imports

--- a/memory/2026-02-22.md
+++ b/memory/2026-02-22.md
@@ -6,7 +6,7 @@
   - `direct_hit` 표기와 실제 피해 수치 불일치 가능성 확인(실행은 3 피해, 설명 생성 문구는 2 피해로 보일 수 있음).
 - 사용자 요청: 위 마법 동작이 제대로 되는지 점검 요청(버그 존재 여부 확인 목적).
 - 사용자 명시 지시로 머슴 관련 운영 제거: mersoom 크론 2개 삭제(`mersoom-learn-kst-10-16-22`, `mersoom-link-report-kst-10-16-22`), daily-ops-checkin에서 머슴 점검 단계 제거.
-- 머슴 관련 파일/레거시 정리: `utility/mersoom/` 전체 삭제, `memory/mersoom-learning.md` 및 `memory/mersoom-link-report-state.json` 삭제, 정책/운영 문서(AGENTS/MEMORY/policy/ops/utility README/cron_webui)에서 관련 참조 제거.
+- 머슴 관련 파일/구형 정리: `utility/mersoom/` 전체 삭제, `memory/mersoom-learning.md` 및 `memory/mersoom-link-report-state.json` 삭제, 정책/운영 문서(AGENTS/MEMORY/policy/ops/utility README/cron_webui)에서 관련 참조 제거.
 - TCG 의도값 복원: 시작 마나 2, 턴 시작 최대 마나 +2를 전역 동작으로 재적용(`vercel/lib/game.js`, `docs/rules.md`).
 
 ## TCG UI/운영 메모 (2026-02-22)
@@ -29,9 +29,9 @@
 - 디스코드 `디코일괄삭제` 요청 시 최근 봇 메시지들을 messageId 기반으로 일괄 삭제하는 루틴 유지(도구 제약상 명시 ID 필요).
 - 사용자 이슈 반영: 장시간 작업 완료 뒤 동일 응답이 시간차로 중복 전송되는 현상 방지를 위해, 완료 직전/직후 동일 본문 재전송 금지 및 중복 감지 시 `NO_REPLY` 처리 규칙을 운영에 고정.
 - 사용자 이슈 반영: 장시간 작업 완료 직후 들어온 새 요청 누락 방지를 위해 최신 사용자 메시지 우선 처리 규칙을 운영에 고정.
-- 사용자 요청(`MEMORY.md에서 policy로 옮길 것들+레거시 체크`) 반영: MEMORY의 정책성 중복 항목을 슬림화하고, 조용시간 규칙은 [`policy/ops.md`](./../policy/ops.md), 모델 우선순위 확인 규칙은 [`policy/studio.md`](./../policy/studio.md)로 이관 정리.
+- 사용자 요청(`MEMORY.md에서 policy로 옮길 것들+구형 체크`) 반영: MEMORY의 정책성 중복 항목을 슬림화하고, 조용시간 규칙은 [`policy/ops.md`](./../policy/ops.md), 모델 우선순위 확인 규칙은 [`policy/studio.md`](./../policy/studio.md)로 이관 정리.
 - 사용자 추가 승인(`ㄱㄱ`) 반영: [`MEMORY.md`](./../MEMORY.md)를 코어 중심으로 재작성해 프로필/협업 원칙/핵심 운영 메모만 남기고 세부 정책·레거시는 policy 단일본 참조로 정리.
-- 데일리 로그 통합: 오늘 수행한 MEMORY→policy 이관/중복 제거/레거시 정리 컨텍스트를 본 파일에 단일 이력으로 합쳐 유지.
+- 데일리 로그 통합: 오늘 수행한 MEMORY→policy 이관/중복 제거/구형 정리 컨텍스트를 본 파일에 단일 이력으로 합쳐 유지.
 - TCG 운영 규칙 추가 확정: 모드칩/시그니처 컴포넌트는 lobby/deck 포함 전 페이지에서 제거했으며, 향후 재추가 금지.
 - 카피/문체 규칙 추가 확정: UI 문구에서 `...`/`…` 사용 금지, 하십시오체(예: `됩니다/합니다`) 금지. 반말/담백 톤으로 통일.
 - 덱 코드 정책 확정: v1 폐기, v2(`v2:` prefix) 단일 포맷만 허용. 클라이언트/서버 공통 codec 사용으로 통일.
@@ -63,7 +63,7 @@
   - `studio/ui_runtime.py`의 `dashboard` 타깃은 제거하고 기존 타깃(cron/shorts/image)만 유지.
   - `TOOLS.md` Studio UI 포트 표기는 cron/shorts/image만 유지.
 - 크론 UI 통합 후 사용자 추가 지시 반영: 대시보드 탭에 기존 수동 점검 항목(유튜브 상태/DM 동기화 무결성/시스템 메시지 중복)을 이관.
-- 대시보드 핵심 Cron 표는 현재 존재하는 활성 대상만 노출하도록 변경(삭제/미등록/레거시 항목은 표기 생략).
+- 대시보드 핵심 Cron 표는 현재 존재하는 활성 대상만 노출하도록 변경(삭제/미등록/구형 항목은 표기 생략).
 - 반영 후 cron UI 재시작 완료(`studio/ui_runtime.py restart --target cron`).
 - 사용자 피드백 반영(대시보드 실질화): 정적 안내 문구를 제거하고 자동 판정 표로 교체.
   - 항목: 유튜브 state 최신성, DM 동기화 무결성 스크립트 실행 결과, 시스템 중복 신호(ops 점검 잡 상태 기반).
@@ -71,12 +71,12 @@
 - 파일명 정리: `studio/dashboard/webui.py`를 `studio/dashboard/webui.py`로 변경하고, `studio/ui_runtime.py`의 cron 타깃 엔트리 경로를 새 파일명으로 갱신.
 - 대시보드 1순위 반영: 핵심 점검 대상 Cron 표를 하드코딩 이름 목록에서 런타임 자동구성으로 전환.
   - 기준: enabled=true + include 키워드(youtube/context/ops-checkin/hygiene/healthcheck) + exclude 키워드(quiet-window/rp/reminder/pokemon/tiktok).
-  - 삭제/레거시/비핵심 작업은 자동으로 제외.
+  - 삭제/구형/비핵심 작업은 자동으로 제외.
 - 대시보드 집산 3차 반영:
   - 점검 항목 정의를 `studio/dashboard/config/dashboard_checks.json`로 분리(체크 추가/삭제를 설정으로 관리).
   - 유튜브 임계치를 `studio/dashboard/config/thresholds.json`로 분리(`okMaxMinutes`, `warnMaxMinutes`).
   - `dashboard_webui.py`는 설정 로드 후 script/builtin 체크를 실행하는 구조로 변경.
-- 레거시/미사용 정리 수행:
+- 구형/미사용 정리 수행:
   - `studio/dashboard/config/dashboard_checks.json`에서 중복된 `rp_runtime` 체크 제거(`rp_health`로 단일화).
   - `studio/dashboard/checks/rp_runtime_check.py` 삭제.
   - `studio/dashboard/webui.py`의 미사용 함수(`run_recovery_bundle`, `build_job`) 및 legacy 주석 블록 제거.
@@ -94,7 +94,7 @@
   - UI 문구/섹션/버튼 라벨을 `studio/dashboard/config/ui_texts.json`으로 분리.
   - 크론 매니저 헤더 컬럼을 `studio/dashboard/config/cron_manager_columns.json`으로 분리.
   - `policy/ops.md`의 슬림 체크리스트를 항목 하드코딩에서 대시보드 설정 참조형으로 전환.
-- 레거시 표기 정리: 런타임 출력/설명에서 `Taeyul`, `CRON_WEBUI` 표기를 `Studio dashboard` 기준으로 교체.
+- 구형 표기 정리: 런타임 출력/설명에서 `Taeyul`, `CRON_WEBUI` 표기를 `Studio dashboard` 기준으로 교체.
 - 사용자 운영 선호 반영: 대시보드 집산은 유지하되 소스 원본 직접 이동은 보류, 대시보드 관점의 참조/판정/표출만 집산(어댑터 레이어) 원칙 합의.
 - [자동 회고] bulk-delete-enqueue 3회 | 결과: fail(1) | 위험: 잘못된 채널/옵션 enqueue | 다음: enqueue 결과와 run 로그 교차 확인
 - [자동 회고] initial-reset-enqueue | 결과: ok | 위험: 중복 초기화 요청 | 다음: 큐 dedupe 상태 확인
